--- a/services.html
+++ b/services.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta property="og:url" content="http://www.ericsouza.com" />
+	<meta property="og:url" content="http://www.dizzzysquirrels.com" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 	<meta name="description" content="Eric Souza Services - 2D Illustration, Animation, 3D modeling, Web design, Photography, Videography">
-        <title>Eric Souza - Services</title>
+        <title>Dizzy Squirrels - Services</title>
         <link rel="stylesheet" type = "text/css" href="css/stylesheet.css"> 
         <link href="stylesheet.css" rel="stylesheet" type="text/css"> 
         <link rel="stylesheet" href="https://use.typekit.net/xgx6jqb.css">
